New Elements, Api update
FE:
- Updated api
- Updated AdminRoute
- Updated AuthProvider for serializing query string
- Updated NavLinks
- Updated AdminLayout
- Updated Registration for admin page
- Created AdminProfile
- Added DateFormat for easy readable date format
- Added Loading element as fallback element
- Added useRefresh hook

BE:
- Added PreAuthorization to some controller methods
- Added getProfile endpoint
- Updated RefreshTokenService and UserServiceImpl
