# ReservationAppServer/src/main/java/cz/reservation/service/UserServiceImpl.java
@@ -97,6 +97,14 @@ public class UserServiceImpl implements UserService {
                 .toList();
     }
 
+    @Override
+    public UserDto getProfile(String username) {
+        System.out.println(userRepository.findByEmail(username));
+        return userMapper.toDto(userRepository
+                .findByEmail(username)
+                .orElseThrow(() -> new EntityNotFoundException("User with username " + username + " not found")));
+    }
+
     @ReadOnlyTransaction
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
